syntax = "proto3";

package lessonmgmt.v1;

import "lessonmgmt/v1/enums.proto";
import "lessonmgmt/v1/lessons.proto";
import "common/v1/requests.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/lessonmgmt/v1;lpb";

message AssignedStudentInfo {
  string student_id = 1;
  string course_id = 2;
  string location_id = 3;
  string duration = 4;
  int32 purchased_slot = 5;
  int32 assigned_slot = 6;
  int32 slot_gap = 7;
  AssignedStudentStatus status = 8;
}

message GetAssignedStudentListRequest {
  message Filter {
    repeated string student_ids = 1;
    repeated string course_ids = 2;
    google.protobuf.Timestamp start_date = 3;
    google.protobuf.Timestamp end_date = 4;
    repeated string location_ids = 5;
    repeated AssignedStudentStatus statuses = 6;
  }
  PurchaseMethod purchase_method = 1;
  common.v1.Paging paging = 2;
  string keyword = 3;
  Filter filter = 4;
  repeated string location_ids = 5;
  string timezone = 6;
}

message GetAssignedStudentListResponse {
  repeated AssignedStudentInfo items = 1;
  common.v1.Paging next_page = 2;
  common.v1.Paging previous_page = 3;
  uint32 total_items = 4;
}

message GetStudentAttendanceRequest {
  common.v1.Paging paging = 1;
  string search_key = 2;
  message Filter {
    repeated string student_id = 1;
    repeated string course_id = 2;
    repeated string location_id = 3;
    google.protobuf.Timestamp start_date = 4;
    google.protobuf.Timestamp end_date = 5;
    repeated StudentAttendStatus attendance_status = 6;
  }
  Filter filter = 3;
  string timezone = 4;
}

message GetStudentAttendanceResponse {
  message StudentAttendance{
    string student_id = 1;
    StudentAttendStatus attendance_status = 2;
    string lesson_id = 3;
    string reallocated_lesson_id = 4;
    string course_id = 5;
    string location_id = 6;
  }
  repeated StudentAttendance items = 1;
  common.v1.Paging next_page = 2;
  common.v1.Paging previous_page = 3;
  uint32 total_items = 4;
}

service AssignedStudentListService {
  rpc GetAssignedStudentList(GetAssignedStudentListRequest) returns (GetAssignedStudentListResponse);
  rpc GetStudentAttendance(GetStudentAttendanceRequest) returns (GetStudentAttendanceResponse);
}
